--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="title_a">AAA</string>
+    <string name="title_b">BBB</string>
+    <string name="title_c">CCC</string>
+    <string name="title_d">DDD</string>
+    <string name="title_e">EEE</string>
 </resources>
